Direct leak of 320 byte(s) in 2 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7facbd9caea0 in operator new(unsigned long) /build/gcc/src/gcc/libsanitizer/asan/asan_new_delete.cc:60
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7faca20af43f in libmatroska::KaxBlock::Create() (/usr/lib/libmatroska.so.6+0x7d43f)
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7faca2304fe8 in libebml::EbmlElement::FindNextElement(libebml::IOCallback&, libebml::EbmlSemanticContext const&, int&, unsigned long, bool, unsigned int) (/usr/lib/libebml.so.4+0x12fe8)
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7faca25a7a08 in EbmlParser::Get(int) /home/refp/work/videolan/vlc/git/modules/demux/mkv/Ebml_parser.cpp:177
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7faca255495e in matroska_segment_c::BlockGet(libmatroska::KaxBlock*&, libmatroska::KaxSimpleBlock*&, bool*, bool*, long*) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1272
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7faca2599ae3 in SegmentSeeker::index_unsearched_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:315
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7faca259a129 in SegmentSeeker::index_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:291
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7faca259a129 in SegmentSeeker::get_seekpoints(matroska_segment_c&, long, std::vector<unsigned int, std::allocator<unsigned int> > const&) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:270
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7faca2558438 in matroska_segment_c::Seek(long, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:822
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7faca25a1d1f in demux_sys_t::PreparePlayback(virtual_segment_c&, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/demux.cpp:802
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7faca25f29b3 in Open /home/refp/work/videolan/vlc/git/modules/demux/mkv/mkv.cpp:256
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7facbd383689 in module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:185
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7facbd3840bd in vlc_module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:277
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7facbd2d3def in demux_NewAdvanced /home/refp/work/videolan/vlc/git/src/input/demux.c:259
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7facbd2d48fd in input_DemuxNew /home/refp/work/videolan/vlc/git/src/input/demux.c:361
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x7facbd301a5c in InputSourceNew /home/refp/work/videolan/vlc/git/src/input/input.c:2288
Indirect leak of 24586 byte(s) in 2 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7facbd9c9e60 in __interceptor_malloc /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:62
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7faca23030d6 in libebml::EbmlBinary::ReadData(libebml::IOCallback&, libebml::ScopeMode) (/usr/lib/libebml.so.4+0x110d6)
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7faca20a5e68 in libmatroska::KaxInternalBlock::ReadData(libebml::IOCallback&, libebml::ScopeMode) (/usr/lib/libmatroska.so.6+0x73e68)
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7faca2559194 in KaxBlock_handler /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1208
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7faca2559194 in KaxBlock_callback /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1205
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7faca2554eb8 in send /home/refp/work/videolan/vlc/git/modules/demux/mkv/Ebml_dispatcher.hpp:113
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7faca2554eb8 in matroska_segment_c::BlockGet(libmatroska::KaxBlock*&, libmatroska::KaxSimpleBlock*&, bool*, bool*, long*) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1360
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7faca2599ae3 in SegmentSeeker::index_unsearched_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:315
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7faca259a129 in SegmentSeeker::index_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:291
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7faca259a129 in SegmentSeeker::get_seekpoints(matroska_segment_c&, long, std::vector<unsigned int, std::allocator<unsigned int> > const&) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:270
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7faca2558438 in matroska_segment_c::Seek(long, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:822
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7faca25a1d1f in demux_sys_t::PreparePlayback(virtual_segment_c&, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/demux.cpp:802
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7faca25f29b3 in Open /home/refp/work/videolan/vlc/git/modules/demux/mkv/mkv.cpp:256
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7facbd383689 in module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:185
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7facbd3840bd in vlc_module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:277
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x7facbd2d3def in demux_NewAdvanced /home/refp/work/videolan/vlc/git/src/input/demux.c:259
[#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0x7facbd2d48fd in input_DemuxNew /home/refp/work/videolan/vlc/git/src/input/demux.c:361
[#17](https://code.videolan.org/videolan/vlc/-/issues/17) 0x7facbd301a5c in InputSourceNew /home/refp/work/videolan/vlc/git/src/input/input.c:2288
Indirect leak of 640 byte(s) in 16 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7facbd9caea0 in operator new(unsigned long) /build/gcc/src/gcc/libsanitizer/asan/asan_new_delete.cc:60
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7faca20a640d in libmatroska::KaxInternalBlock::ReadData(libebml::IOCallback&, libebml::ScopeMode) (/usr/lib/libmatroska.so.6+0x7440d)
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7faca2559194 in KaxBlock_handler /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1208
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7faca2559194 in KaxBlock_callback /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1205
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7faca2554eb8 in send /home/refp/work/videolan/vlc/git/modules/demux/mkv/Ebml_dispatcher.hpp:113
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7faca2554eb8 in matroska_segment_c::BlockGet(libmatroska::KaxBlock*&, libmatroska::KaxSimpleBlock*&, bool*, bool*, long*) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1360
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7faca2599ae3 in SegmentSeeker::index_unsearched_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:315
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7faca259a129 in SegmentSeeker::index_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:291
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7faca259a129 in SegmentSeeker::get_seekpoints(matroska_segment_c&, long, std::vector<unsigned int, std::allocator<unsigned int> > const&) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:270
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7faca2558438 in matroska_segment_c::Seek(long, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:822
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7faca25a1d1f in demux_sys_t::PreparePlayback(virtual_segment_c&, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/demux.cpp:802
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7faca25f29b3 in Open /home/refp/work/videolan/vlc/git/modules/demux/mkv/mkv.cpp:256
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7facbd383689 in module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:185
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7facbd3840bd in vlc_module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:277
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7facbd2d3def in demux_NewAdvanced /home/refp/work/videolan/vlc/git/src/input/demux.c:259
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x7facbd2d48fd in input_DemuxNew /home/refp/work/videolan/vlc/git/src/input/demux.c:361
[#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0x7facbd301a5c in InputSourceNew /home/refp/work/videolan/vlc/git/src/input/input.c:2288
[#17](https://code.videolan.org/videolan/vlc/-/issues/17) 0x7facbd309963 in Init /home/refp/work/videolan/vlc/git/src/input/input.c:1293
Indirect leak of 128 byte(s) in 2 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7facbd9caea0 in operator new(unsigned long) /build/gcc/src/gcc/libsanitizer/asan/asan_new_delete.cc:60
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7faca20a7035 in void std::vector<libmatroska::DataBuffer*, std::allocator<libmatroska::DataBuffer*> >::_M_emplace_back_aux<libmatroska::DataBuffer*>(libmatroska::DataBuffer*&&) (/usr/lib/libmatroska.so.6+0x75035)
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7faca20a6459 in libmatroska::KaxInternalBlock::ReadData(libebml::IOCallback&, libebml::ScopeMode) (/usr/lib/libmatroska.so.6+0x74459)
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7faca2559194 in KaxBlock_handler /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1208
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7faca2559194 in KaxBlock_callback /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1205
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7faca2554eb8 in send /home/refp/work/videolan/vlc/git/modules/demux/mkv/Ebml_dispatcher.hpp:113
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7faca2554eb8 in matroska_segment_c::BlockGet(libmatroska::KaxBlock*&, libmatroska::KaxSimpleBlock*&, bool*, bool*, long*) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1360
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7faca2599ae3 in SegmentSeeker::index_unsearched_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:315
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7faca259a129 in SegmentSeeker::index_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:291
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7faca259a129 in SegmentSeeker::get_seekpoints(matroska_segment_c&, long, std::vector<unsigned int, std::allocator<unsigned int> > const&) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:270
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7faca2558438 in matroska_segment_c::Seek(long, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:822
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7faca25a1d1f in demux_sys_t::PreparePlayback(virtual_segment_c&, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/demux.cpp:802
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7faca25f29b3 in Open /home/refp/work/videolan/vlc/git/modules/demux/mkv/mkv.cpp:256
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7facbd383689 in module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:185
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7facbd3840bd in vlc_module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:277
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x7facbd2d3def in demux_NewAdvanced /home/refp/work/videolan/vlc/git/src/input/demux.c:259
[#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0x7facbd2d48fd in input_DemuxNew /home/refp/work/videolan/vlc/git/src/input/demux.c:361
[#17](https://code.videolan.org/videolan/vlc/-/issues/17) 0x7facbd301a5c in InputSourceNew /home/refp/work/videolan/vlc/git/src/input/input.c:2288
Indirect leak of 64 byte(s) in 2 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7facbd9caea0 in operator new(unsigned long) /build/gcc/src/gcc/libsanitizer/asan/asan_new_delete.cc:60
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7faca20a6ece in std::vector<int, std::allocator<int> >::_M_default_append(unsigned long) (/usr/lib/libmatroska.so.6+0x74ece)
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7faca20a6770 in libmatroska::KaxInternalBlock::ReadData(libebml::IOCallback&, libebml::ScopeMode) (/usr/lib/libmatroska.so.6+0x74770)
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7faca2559194 in KaxBlock_handler /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1208
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7faca2559194 in KaxBlock_callback /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1205
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7faca2554eb8 in send /home/refp/work/videolan/vlc/git/modules/demux/mkv/Ebml_dispatcher.hpp:113
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7faca2554eb8 in matroska_segment_c::BlockGet(libmatroska::KaxBlock*&, libmatroska::KaxSimpleBlock*&, bool*, bool*, long*) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:1360
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7faca2599ae3 in SegmentSeeker::index_unsearched_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:315
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7faca259a129 in SegmentSeeker::index_range(matroska_segment_c&, SegmentSeeker::Range, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:291
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7faca259a129 in SegmentSeeker::get_seekpoints(matroska_segment_c&, long, std::vector<unsigned int, std::allocator<unsigned int> > const&) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment_seeker.cpp:270
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7faca2558438 in matroska_segment_c::Seek(long, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/matroska_segment.cpp:822
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7faca25a1d1f in demux_sys_t::PreparePlayback(virtual_segment_c&, long) /home/refp/work/videolan/vlc/git/modules/demux/mkv/demux.cpp:802
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7faca25f29b3 in Open /home/refp/work/videolan/vlc/git/modules/demux/mkv/mkv.cpp:256
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7facbd383689 in module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:185
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7facbd3840bd in vlc_module_load /home/refp/work/videolan/vlc/git/src/modules/modules.c:277
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x7facbd2d3def in demux_NewAdvanced /home/refp/work/videolan/vlc/git/src/input/demux.c:259
[#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0x7facbd2d48fd in input_DemuxNew /home/refp/work/videolan/vlc/git/src/input/demux.c:361
[#17](https://code.videolan.org/videolan/vlc/-/issues/17) 0x7facbd301a5c in InputSourceNew /home/refp/work/videolan/vlc/git/src/input/input.c:2288