demux/mkv: fix memory-leak during seek

The diff should speak for itself, but we should of course not break
out of the loop before we had the opportunity to free the allocated
memory within it.

fixes #17425

Signed-off-by: Thomas Guillem <thomas@gllm.fr>